Fixed social media links - centered and justified - add foot background colour add text to our mission fixed empty gaps at margins

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -65,6 +65,7 @@ li {
 .sanskrit {
     font-size: 200%;
     font-family: 'Poppins', sans-serif;
+    color: #cc7405;
 }
 .flex-container {
     display: flex;
@@ -76,6 +77,7 @@ li {
     border: 4px solid #C8BF9E;
     text-align: center;
     display: flex;
+    overflow: hidden;
 }
 
 .mission , p { 
@@ -83,28 +85,35 @@ li {
     justify-content: center;
     text-align: center;
     display: flex;
-    margin-top: 100px;   
+    margin-top: 100px;
 }
 
 /* footer */
 
 footer {
     height: 150px;
+    display: flex;
+    justify-content: center;
+    background-color: #f6f3e1;
 }
 
 .social-networks {
     text-align: center;
-    display: center;
+    align-items: center;
+    display: flex;    
+}
+
+.social-networks a {
+    margin: 0 4em;
 }
 
 .social-networks > li {
-    display: inline;
+    display: flex;    
 }
 
 .social-networks i {
     font-size: 300%;
-    margin: 50%;
-    padding: 5%;
-    color: #3a3a3a;
+    padding: 20%;
+    color: #cc7405;   
 }
 
